--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
@@ -48,12 +49,14 @@
     "nodemailer": "^7.0.9",
     "pdfkit": "^0.15.0",
     "qrcode": "^1.5.4",
+    "sanitize-html": "^2.17.0",
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
     "twilio": "^5.3.2",
     "validator": "^13.12.0",
     "winston": "^3.14.2",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
